--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   json_annotation: ^4.9.0
   fl_chart: ^1.0.0
   http: ^1.4.0
+  pdf: ^3.11.3
+  path_provider: ^2.0.15
+  open_file: ^3.5.10
+  csv: ^5.0.0
 
 dev_dependencies:
   flutter_test:
